Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-91402

[REG: 5.15 - 6.x] Wheel events get lost when connecting from macOS via ssh

XMLWordPrintable

    • Linux/X11
    • f85e70c569f4aa979004889d20de8acec9a790bf (qt/qtbase/dev) 84f0b4df0e880bcd68bd0e4781dfb340f4bd528f (qt/qtbase/6.1)

      When starting a Qt 6 application on a Linux machine via ssh from a macOS machine using XQuartz, everything seems to work fine besides the wheel events that get lost. The problem is already visible if starting designer and trying to scroll the widgets list.

      The wheel events are corretly delivered to the X11 system as can be seen by starting xev on the remote Linux host:

      ButtonPress event, serial 31, synthetic NO, window 0x600001,
      root 0xc1, subw 0x0, time 3632166872, (167,144), root:(167,167),
      state 0x0, button 5, same_screen YES

      ButtonRelease event, serial 31, synthetic NO, window 0x600001,
      root 0xc1, subw 0x0, time 3632166872, (167,144), root:(167,167),
      state 0x1000, button 5, same_screen YES

      ButtonPress event, serial 31, synthetic NO, window 0x600001,
      root 0xc1, subw 0x0, time 3632167520, (167,144), root:(167,167),
      state 0x0, button 4, same_screen YES

      ButtonRelease event, serial 31, synthetic NO, window 0x600001,
      root 0xc1, subw 0x0, time 3632167520, (167,144), root:(167,167),
      state 0x800, button 4, same_screen YES

      With Qt 5.15 we did not encounter any problems with the wheel events. In this version there are correctly propagated.

       

        For Gerrit Dashboard: QTBUG-91402
        # Subject Branch Project Status CR V

            srutledg Shawn Rutledge
            mlangen Marc Langenbach
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes