xcb: use QXcbScrollingDevice for a touchpad

When using XQuartz on macOS, the virtual pointer device is detected as
a touchpad, not a mouse; but QXcbConnection::xi2HandleScrollEvent()
expects the device to be an instance of QXcbScrollingDevice for storage
of some state. A touchpad that has the scrolling capability must be
that type, not a plain QPointingDevice.

Fixes: QTBUG-91402
Change-Id: I1b82766d4a3f87f656e56c0d8904def26fb0979a
Reviewed-by: Liang Qi <liang.qi@qt.io>
(cherry picked from commit f85e70c569f4aa979004889d20de8acec9a790bf)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>